--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -53,10 +53,6 @@
 
   a {
     color: $link-color;
-
-    &:hover {
-      color: $link-color-hover;
-    }
   }
 }
 
@@ -70,6 +66,37 @@
 
   a {
     color: $text-color-lightest !important;
+  }
+}
+
+.leaflet-control-container {
+  .leaflet-control-layers,
+  .leaflet-bar {
+    border: 1px solid $link-color;
+    box-shadow: none;
+  }
+  .leaflet-control-layers,
+  .leaflet-bar a {
+    background: rgba(249, 245, 255, 0.75);
+  }
+  .leaflet-bar a {
+    color: $link-color;
+
+    &:first-child {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      border-bottom-color: #cabede;
+    }
+    &:hover {
+      background: rgba(255, 255, 255, 0.75);
+    }
+    &:last-child {
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+  }
+  .leaflet-control-layers-expanded {
+    background: #fff;
   }
 }
 
