--- a/src/htdocs/css/mappane/_mousePosition.scss
+++ b/src/htdocs/css/mappane/_mousePosition.scss
@@ -1,7 +1,7 @@
 .leaflet-container .leaflet-control-mouseposition {
-  background-color: rgba(255, 255, 255, .7);
+  background-color: rgba(255, 255, 255, .5);
   color: #333;
   font: 11px/1.5 $font-family;
-  margin: 0;
-  padding: 0 5px;
+  margin: 0 0 5px 0;
+  padding: 0 3px;
 }
