tweak values for consistency amongst widgets

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -57,20 +57,27 @@
   }
 }
 
-/* Quell long attributions */
-.leaflet-control-attribution {
-  color: $text-color-lightest;
-  max-width: 300px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-
-  a {
-    color: $text-color-lightest !important;
-  }
-}
-
 .leaflet-control-container {
+  .leaflet-control-attribution {
+    background-color: rgba(255, 255, 255, .5);
+    color: #666;
+    max-width: 300px;
+    overflow: hidden; /* Quell long attributions */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    a {
+      color: #666 !important;
+    }
+
+    &:hover {
+      color: $text-color;
+
+      a {
+        color: $text-color !important;
+      }
+    }
+  }
   .leaflet-control-layers,
   .leaflet-bar {
     border: 1px solid $link-color;
@@ -98,9 +105,11 @@
   }
   .leaflet-control-layers-expanded {
     background: #fff;
+    padding: 6px 10px;
   }
   .leaflet-control-layers-separator {
     border-top-color: #cabede;
+    margin: 5px -10px;
   }
 }
 
