--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -10,10 +10,12 @@
   div {
     background-color: rgba(255, 255, 120, 0.95);
     border-top: 2px solid rgba(255, 255, 0, 1);
+    color: #fff;
     display: none;
     min-height: 44px;
     padding: 10px 0;
     position: absolute;
+    text-align: center;
     text-shadow: 1px 1px 3px #fffec6;
     width: 100%;
 
