organize css files

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,7 +1,7 @@
 @import '_variables.scss';
 
 @import '_editPane.scss';
-@import '_forms.scss';
+@import '_formElements.scss';
 @import '_helpPane.scss';
 @import '_impactBubbles.scss';
 @import '_lightbox.scss';
