--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,4 +1,12 @@
 #summaryPane {
+  canvas {
+    width: 180px;
+  }
+  /* hide rendered beachballs not yet moved into place under mainshock */
+  > canvas {
+    display: none;
+  }
+
   h2 + p {
     margin-bottom: 2rem;
   }
