add subtle grey border around SM/DYFI thumbs for intensity 1

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -204,7 +204,7 @@
   }
 
   .mmiI {
-    border-color: $mmiI-color !important;
+    border-color: #efefef !important; /* add subtle grey border so it shows up */
   }
   .mmiII {
     border-color: $mmiII-color !important;
