--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -70,10 +70,8 @@ h4 {
   font-size: 1.2rem;
 }
 
-p.description {
-  > strong {
-    font-weight: 500;
-  }
+p > strong {
+  font-weight: 500;
 }
 
 table {
