--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -35,13 +35,13 @@ a {
   text-decoration-skip-ink: none;
   text-decoration-thickness: 2px;
   text-underline-offset: 2px;
+  transition: text-decoration-color .2s ease-in-out;
 
   &:active {
     color: $link-color-active;
   }
   &:hover {
     text-decoration-color: color($link-color tint(25%));
-    transition: text-decoration-color .15s ease-in;
   }
   &:visited {
     color: $link-color-visited;
