--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -1,10 +1,26 @@
 $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
 
+.earthquake {
+  .impact-bubbles {
+    margin: 1em 0;
+  }
+}
+
 .impact-bubbles {
   display: flex;
-  margin: 1em 0;
 
   > a {
+    width: 25%;
+
+    &:hover {
+      background-image: $hover;
+    }
+  }
+  > span {
+    width: 3.5em;
+  }
+
+  > a, span {
     background-color: #fff;
     border-radius: 3px;
     box-shadow: inset 0 0 1px rgba(0, 0, 0, .5);
@@ -18,7 +34,6 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
     text-decoration: none;
     text-overflow: ellipsis;
     text-shadow: 1px 1px 0 hsla(0, 0%, 100%, .3);
-    width: 25%;
 
     > abbr {
       border-bottom: 1px dotted #222;
@@ -30,13 +45,84 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
       white-space: nowrap;
     }
 
-    &:hover {
-      background-image: $hover;
-    }
-
     + a {
       margin-left: 5px;
     }
+  }
+
+  .mmiI {
+    background-color: $mmiI-color;
+    color: $mmiI-text-color !important;
+  }
+  .mmiII {
+    background-color: $mmiII-color;
+    color: $mmiII-text-color !important;
+  }
+  .mmiIII  {
+    background-color: $mmiIII-color;
+    color: $mmiIII-text-color !important;
+  }
+  .mmiIV {
+    background-color: $mmiIV-color;
+    color: $mmiIV-text-color !important;
+  }
+  .mmiV {
+    background-color: $mmiV-color;
+    color: $mmiV-text-color !important;
+  }
+  .mmiVI {
+    background-color: $mmiVI-color;
+    color: $mmiVI-text-color !important;
+  }
+  .mmiVII {
+    background-color: $mmiVII-color;
+    color: $mmiVII-text-color !important;
+  }
+  .mmiVIII {
+    background-color: $mmiVIII-color;
+    color: $mmiVIII-text-color !important;
+  }
+  .mmiIX {
+    background-color: $mmiIX-color;
+    color: $mmiIX-text-color !important;
+  }
+  .mmiX {
+    background-color: $mmiX-color;
+    color: $mmiX-text-color !important;
+  }
+  .mmiXI {
+    background-color: $mmiXI-color;
+    color: $mmiXI-text-color !important;
+  }
+  .mmiXII {
+    background-color: $mmiXII-color;
+    color: $mmiXII-text-color !important;
+  }
+
+  .pager-alertlevel-green {
+    background-color: $pager-green-color !important;
+    color: $pager-green-text-color !important;
+  }
+  .pager-alertlevel-orange {
+    background-color: $pager-orange-color !important;
+    color: $pager-orange-text-color !important;
+  }
+  .pager-alertlevel-pending {
+    background-color: $pager-pending-color;
+    color: $pager-pending-text-color;
+  }
+  .pager-alertlevel-red {
+    background-color: $pager-red-color !important;
+    color: $pager-red-text-color !important;
+  }
+  .pager-alertlevel-yellow {
+    background-color: $pager-yellow-color !important;
+    color: $pager-yellow-text-color !important;
+  }
+
+  .roman {
+    font-family: $mmi-font-family;
+    text-transform: uppercase;
   }
 
   > .tsunami {
@@ -63,94 +149,4 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
       }
     }
   }
-}
-
-.roman {
-  font-family: $mmi-font-family;
-  text-transform: uppercase;
-}
-
-.pager-alertlevel-pending {
-  background-color: $pager-pending-color;
-  color: $pager-pending-text-color;
-}
-
-.pager-alertlevel-green {
-  background-color: $pager-green-color !important;
-  color: $pager-green-text-color !important;
-}
-
-.pager-alertlevel-yellow {
-  background-color: $pager-yellow-color !important;
-  color: $pager-yellow-text-color !important;
-}
-
-.pager-alertlevel-orange {
-  background-color: $pager-orange-color !important;
-  color: $pager-orange-text-color !important;
-}
-
-.pager-alertlevel-red {
-  background-color: $pager-red-color !important;
-  color: $pager-red-text-color !important;
-}
-
-a.mmiI {
-  background-color: $mmiI-color;
-  color: $mmiI-text-color !important;
-}
-
-a.mmiII {
-  background-color: $mmiII-color;
-  color: $mmiII-text-color !important;
-}
-
-a.mmiIII  {
-  background-color: $mmiIII-color;
-  color: $mmiIII-text-color !important;
-}
-
-a.mmiIV {
-  background-color: $mmiIV-color;
-  color: $mmiIV-text-color !important;
-}
-
-a.mmiV {
-  background-color: $mmiV-color;
-  color: $mmiV-text-color !important;
-}
-
-a.mmiVI {
-  background-color: $mmiVI-color;
-  color: $mmiVI-text-color !important;
-}
-
-a.mmiVII {
-  background-color: $mmiVII-color;
-  color: $mmiVII-text-color !important;
-}
-
-a.mmiVIII {
-  background-color: $mmiVIII-color;
-  color: $mmiVIII-text-color !important;
-}
-
-a.mmiIX {
-  background-color: $mmiIX-color;
-  color: $mmiIX-text-color !important;
-}
-
-a.mmiX {
-  background-color: $mmiX-color;
-  color: $mmiX-text-color !important;
-}
-
-a.mmiXI {
-  background-color: $mmiXI-color;
-  color: $mmiXI-text-color !important;
-}
-
-a.mmiXII {
-  background-color: $mmiXII-color;
-  color: $mmiXII-text-color !important;
 }
