--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,12 +1,8 @@
-#summaryPane {
-  canvas {
-    width: 180px;
-  }
-  /* hide rendered beachballs not yet moved into place under mainshock */
-  > canvas {
-    display: none;
-  }
+@import 'features/_aftershocks.scss';
+@import 'features/_earthquakes.scss';
+@import 'features/_mainshock.scss';
 
+#summaryPane {
   h2 + p {
     margin-bottom: 2rem;
   }
@@ -17,32 +13,6 @@
 
   h4 {
     margin-bottom: 0;
-  }
-
-  table.m0 tr.m0,
-  table.m1 tr.m1,
-  table.m2 tr.m2,
-  table.m3 tr.m3,
-  table.m4 tr.m4,
-  table.m5 tr.m5,
-  table.m6 tr.m6,
-  table.m7 tr.m7,
-  table.m8 tr.m8,
-  table.m9 tr.m9 {
-    display: table-row;
-  }
-
-  tr.m0,
-  tr.m1,
-  tr.m2,
-  tr.m3,
-  tr.m4,
-  tr.m5,
-  tr.m6,
-  tr.m7,
-  tr.m8,
-  tr.m9 {
-    display: none;
   }
 
   time.updated {
@@ -69,64 +39,6 @@
   .historical {
     order: 3;
   }
-  .pager-cities {
-    order: 4;
-  }
-
-  .bin {
-    td, th {
-      padding-left: .4em;
-      padding-right: .4em;
-    }
-    td {
-      &:not(:first-child) {
-        text-align: right;
-      }
-
-      &.total {
-        background-color: $bg-color-darker;
-      }
-    }
-
-    th {
-      &.period {
-        border-bottom: 1px solid $border-color-lighter;
-        font-weight: 400;
-        text-align: right;
-      }
-      &.rowlabel {
-        border-bottom: 1px solid $border-color-lighter;
-        border-right: 1px solid $border-color;
-        padding-right: 1em;
-        text-align: center;
-      }
-    }
-  }
-
-  .bins {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: -1.25em;
-
-    table {
-      margin-right: 2em;
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
-  .event-summary {
-    padding-left: 32px;
-    position: relative;
-
-    img {
-      left: 12px;
-      position: absolute;
-      top: 8px;
-    }
-  }
 
   .feature {
     width: 100%;
@@ -139,78 +51,6 @@
   .features {
     display: flex;
     flex-wrap: wrap;
-  }
-
-  .hide-year .year {
-    display: none; /* hide year column when duration is 30 days or less */
-  }
-
-  .eqlist {
-    td {
-      .tz {
-        display: none;
-      }
-
-      &.depth,
-      &.distance,
-      &.mag {
-        text-align: right;
-      }
-      &.distance span {
-        display: inline-block;
-        text-align: left;
-        width: 1.5em;
-      }
-      &.location {
-        text-align: center;
-      }
-    }
-
-    th {
-      position: relative;
-
-      &.sort-header {
-        cursor: pointer;
-        white-space: nowrap;
-
-        &:after {
-          border-color: #404040 transparent;
-          border-style: solid;
-          border-width: 0 4px 4px;
-          content: '';
-          display: inline-block;
-          margin: 8px 0 4px 2px;
-          position: absolute;
-          visibility: hidden;
-        }
-        &:hover {
-          color: $text-color-darker;
-        }
-        &:selection {
-          background: transparent;
-        }
-
-        &.sort-up:after,
-        &.sort-down:after {
-          opacity: 1.0;
-          visibility: visible;
-        }
-        &.sort-up:after {
-          border-bottom: none;
-          border-width: 4px 4px 0;
-        }
-      }
-    }
-
-    tr {
-      transition: all .25s ease-out;
-    }
-    tr:hover:not(.no-sort), .selected {
-      background: $accent-color-lightest;
-      color: $link-color;
-      cursor: pointer;
-      transition-duration: 0s;
-    }
   }
 
   .mmiI {
@@ -248,141 +88,6 @@
   }
   .mmiXII {
     border-color: $mmiXII-color !important;
-  }
-
-  .pager-cities {
-    td, th {
-      padding: 0.25em .8em;
-    }
-    td:nth-child(3) {
-      text-align: right;
-    }
-    tr {
-      border: none; /* override general table border styles */
-      border-top: 1px solid $border-color-lighter;
-
-      &.city, &:first-child {
-        border: none;
-      }
-      &:last-child {
-        border-bottom: 1px solid $border-color-lighter;
-      }
-    }
-
-    .city td {
-      color: #999;
-      padding: 0 .8em .3em .8em;
-    }
-  }
-
-  .products {
-    display: flex;
-    flex-wrap: wrap;
-
-    h4 {
-      margin: 0;
-      text-align: center;
-
-      &+img, &+canvas {
-        margin-top: 1em;
-      }
-    }
-
-    .dyfi img, .shakemap img {
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      padding: 2px;
-    }
-
-    .earthquake {
-      margin-right: 1em;
-
-      h4 {
-        text-align: left;
-      }
-    }
-
-    .hide {
-      display: none;
-    }
-
-    .scale {
-      max-width: 50%;
-
-      a {
-        display: block;
-        margin: 0 .5em;
-      }
-      canvas, img {
-        max-width: 100%;
-        width: 180px;
-      }
-
-      &:last-child {
-        a {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-
-  .probabilities {
-    display: flex;
-    line-height: 1;
-
-    a {
-      border: 1px solid $border-color;
-      border-radius: 3px;
-      color: $text-color;
-      display: block;
-      margin-right: 1em;
-      text-align: center;
-      text-decoration: none;
-      transition: all .35s ease-out;
-      width: 6em;
-
-      abbr {
-        color: $text-color-lightest;
-        font-size: .8em;
-        display: inline-block;
-        margin-top: 5px;
-        transition: color .35s ease-out;
-      }
-      h4 {
-        background: $bg-color-darker;
-        border-radius: 3px 3px 0 0;
-        margin: 0;
-        padding: 4px 0;
-        transition: background .35s ease-out;
-      }
-      ul {
-        list-style: none;
-        margin: .75em 0 1em;
-        padding: 0;
-      }
-
-      .probability {
-        font: 1.25em $mmi-font-family;
-      }
-
-      &:hover {
-        border-color: color($accent-color tint(50%));
-        color: $accent-color;
-        transition-duration: 0s;
-
-        abbr {
-          color: color($accent-color tint(40%));
-          border-color: color($accent-color tint(40%));
-          transition-duration: 0s;
-        }
-        h4 {
-          background: $accent-color-lightest;
-        }
-      }
-      &:last-child {
-        margin-right: 0;
-      }
-    }
   }
 }
 
