--- a/src/htdocs/css/features/_aftershocks.scss
+++ b/src/htdocs/css/features/_aftershocks.scss
@@ -35,7 +35,7 @@
       }
 
       .probability {
-        font: 1.25em $mmi-font-family;
+        font: 1.25em $font-family-mmi;
       }
 
       &:hover {
