--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -141,3 +141,39 @@
     }
   }
 }
+
+/* Earthquake details shown on edit, map (popup), and summary panes
+    (also used for other (i.e. non-eq) Leaflet popups) */
+.earthquake, .leaflet-popup-content {
+  dd, dt {
+    line-height: 1.7;
+  }
+  dd {
+    color: $text-color;
+    margin-left: 5em;
+  }
+  dl {
+    margin-bottom: 0;
+  }
+  dt {
+    clear: left;
+    color: $text-color-lighter;
+    display: inline-block;
+    float: left;
+    font-weight: 300;
+    letter-spacing: .015em;
+    margin-right: .75em;
+    text-align: right;
+    width: 4.25em;
+  }
+  h4 {
+    margin: 0;
+  }
+  time {
+    display: block;
+  }
+
+  [datetime] {
+    min-width: 20em;
+  }
+}
