--- a/src/htdocs/css/features/_shakemap-stations.scss
+++ b/src/htdocs/css/features/_shakemap-stations.scss
@@ -247,7 +247,7 @@
   }
 
   .roman {
-    font-family: $mmi-font-family;
+    font-family: $font-family-mmi;
     text-transform: uppercase;
   }
 }
