--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -119,7 +119,7 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
   }
 
   .roman {
-    font-family: $mmi-font-family;
+    font-family: $font-family-mmi;
     text-transform: uppercase;
   }
 
