--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -1,12 +1,10 @@
 #summaryPane {
-  canvas {
-    width: 180px;
-  }
-  > canvas { // hide rendered beachballs not yet moved into place under mainshock
+  > canvas { /* hide rendered beachballs not yet moved into place under mainshock */
     display: none;
   }
 
   .event-summary {
+    margin-top: .5em;
     padding-left: 32px;
     position: relative;
 
@@ -17,9 +15,36 @@
     }
   }
 
+  .hide { /* missing product */
+    display: none;
+  }
+
+  .mainshock > div {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .pager-cities,
+  .products {
+    margin: 0 0 1em 0;
+    max-width: 100%;
+    width: 420px;
+  }
+
   .pager-cities {
+    border-left: 1px solid $border-color-lightest;
+    padding-left: 40px;
+
+    h4 {
+      margin-top: 0;
+    }
+
+    table {
+      margin-top: .5em;
+      width: 100%;
+    }
     td, th {
-      padding: 0.25em .8em;
+      padding: 0.25em;
     }
     td:nth-child(3) {
       text-align: right;
@@ -28,7 +53,8 @@
       border: none; /* override general table border styles */
       border-top: 1px solid $border-color-lighter;
 
-      &.city, &:first-child {
+      &.city,
+      &:first-child {
         border: none;
       }
       &:last-child {
@@ -38,58 +64,74 @@
 
     .city td {
       color: #999;
-      padding: 0 .8em .3em .8em;
+      padding: 0 .25em .3em .25em;
     }
   }
 
   .products {
     display: flex;
     flex-wrap: wrap;
+    padding-right: 40px;
+
+    > div { /* covers implicit ".one-up" (one product per row) scenario */
+      width: 100%;
+    }
 
     h4 {
       margin: 0;
       text-align: center;
 
-      &+img, &+canvas {
-        margin-top: 1em;
+      &+img,
+      &+canvas {
+        margin-top: .5em;
       }
     }
 
-    .dyfi img, .shakemap img {
+    .dyfi img,
+    .shakemap img {
       border: 2px solid #ccc;
       border-radius: 5px;
       padding: 2px;
     }
 
-    .earthquake {
-      margin-right: 1em;
-
-      h4 {
-        text-align: left;
-      }
+    .earthquake h4 {
+      text-align: left;
     }
 
-    .hide {
-      display: none;
-    }
-
-    .scale {
-      max-width: 50%;
+    .two-up { /* two products per row */
+      max-width: 190px;
+      width: 50%;
 
       a {
         display: block;
-        margin: 0 .5em;
+        margin: 1em .75em 0 .75em;
       }
       canvas, img {
-        max-width: 100%;
-        width: 180px;
+        width: 100%;
       }
 
-      &:last-child {
-        a {
-          margin-right: 0;
-        }
+      &:nth-child(2n) a { /* first product in row */
+        margin-left: 0;
+      }
+      &:nth-child(2n+1) a { /* second product in row */
+        margin-right: 0;
       }
     }
   }
+}
+
+@media only screen
+  and (max-width: 890px) {
+    #summaryPane {
+      .mainshock > div {
+        display: block;
+      }
+
+      .pager-cities,
+      .products {
+        border: none;
+        padding: 0;
+        width: 380px; /* accounts for loss of 40px padding */
+      }
+    }
 }
