use variable colors

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -50,7 +50,7 @@
   }
 
   .mmiI {
-    border-color: #efefef !important; /* add subtle grey border so it shows up */
+    border-color: $border-color-lighter !important; /* add subtle grey border so it shows up */
   }
   .mmiII {
     border-color: $mmiII-color !important;
