set td/th classes to match obj prop names in eq lists

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -89,7 +89,7 @@
         text-align: left;
         width: 1.5em;
       }
-      &.location {
+      &.latlng {
         text-align: center;
       }
     }
