--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -5,6 +5,10 @@
 
   h3 {
     margin: 1.5em 0 .5em;
+
+    .mag {
+      margin-left: .25em; /* account for collapse of whitespace by display:flex */
+    }
   }
 
   h4 {
