tweak display of placeholder layer in layer list

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -15,10 +15,14 @@
     display: none;
   }
 
-  .spinner div {
-    height: .9em;
-    top: -.8em;
-    width: .9em;
+  .spinner {
+    width: 1.5em;
+
+    div {
+      height: .9em;
+      top: -.75em;
+      width: .9em;
+    }
   }
 }
 
