ensure distance to mainshock is not displayed - sometimes selected class (which hides it) is not set; not sure why??

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -90,8 +90,14 @@
       padding: 2px;
     }
 
-    .earthquake h4 {
-      text-align: left;
+    .earthquake {
+      h4 {
+        text-align: left;
+      }
+
+      .distance {
+        display: none;
+      }
     }
 
     .two-up { /* two products per row */
