--- a/src/htdocs/css/leaflet/_mousePosition.scss
+++ b/src/htdocs/css/leaflet/_mousePosition.scss
@@ -1,8 +1,10 @@
-.leaflet-container .leaflet-control-mouseposition {
+@use '../variables' as *;
+
+.leaflet-control-mouseposition {
   background-color: rgba(255, 255, 255, .5);
   color: $text-color;
   font: 11px/1.5 $font-family;
-  margin: 0 0 5px 0;
+  margin: 0 0 5px 0 !important;
   padding: 0 3px;
   user-select: none;
 }
