--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -1,5 +1,5 @@
 .lightbox {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, .9);
   bottom: 0;
   cursor: pointer;
   display: flex;
@@ -8,7 +8,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  transition: opacity .25s ease-out;
+  transition: opacity .25s ease-in-out;
   visibility: visible;
   z-index: 10000;
 
@@ -37,8 +37,8 @@
     top: 10px;
     width: 25px;
   }
-}
 
-.lightbox:hover:after {
-  background: #fff;
+  &:hover:after {
+    background: #fff;
+  }
 }
